rubocop/examples/good/style_MultilineIfThen.rb
# Do not use then for multi-line if/unless.

# good
if some_condition
  # body omitted
end
