rubocop/examples/bad/style_MultilineIfThen.rb
# Do not use then for multi-line if/unless.

# bad
if some_condition then
  # body omitted
end
